# query-beir-server

./: .gitignore  main.py  pyproject.toml
src/: clustering_service.py  config.py  embeddings.py  main.py  qdrant_storage.py  search_evaluation.py
