[project]
name = "query-beir-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.10.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "hdbscan>=0.8.33",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
]
